<resources>
    <string name="app_name"></string> <!-- Make sure to add your actual app name -->
    <string name="recipe_image">Recipe Image</string>
    <string name="view_recipes_button">View Recipes</string>
    <string name="title_activity_register">Register</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="view_recipes">View Recipes</string>
    <string name="view_macros">View Macros</string> <!-- Added string for View Macros -->
    <string name="default_web_client_id">933419713952-jn4snrjdffg6csgm1derjm0shpcg0cuv.apps.googleusercontent.com</string>
    <string name="calculate_macros">Calculate your Macros</string>
    <string name="contact_us">Contact us and Add your recipe</string>
    <string name="logout">Logout</string>
    <string name="view_macros_and_recipes">View Macros and Recipes</string>
    <string name="food_diary">Food diary</string>
    <string name="daily_tracker">Daily Tracker</string>
    <string name="feedback">Feedback</string>
    <string name="dashboard">Dashboard</string>

    <!-- Added strings for custom switch labels -->
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>

    <string-array name="meal_times">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>

    <string-array name="activity_levels">
        <item>Sedentary (little or no exercise)</item>
        <item>Lightly Active (light exercise/sports 1-3 days/week)</item>
        <item>Moderately Active (moderate exercise/sports 3-5 days/week)</item>
        <item>Very Active (hard exercise/sports 6-7 days a week)</item>
        <item>Extra Active (very hard exercise/sports &amp; physical job or 2x training)</item>
    </string-array>
</resources>
